--- a/analyze.Rmd
+++ b/analyze.Rmd
@@ -8,13 +8,26 @@ output: html_document
 ```{r data, echo=FALSE, message=FALSE}
 library(readxl)
 library(dplyr)
+library(broom)
+library(pander)
 
 data <- read_excel("data/data.xlsx")
 names(data) <- make.names(names(data))
 
 data <- data %>%
     mutate(RRT.prior.to.arrest = ifelse(RRT.prior.to.arrest == "Y", TRUE, FALSE),
-           Initial.rhythm = factor(Initial.rhythm)) %>%
+           Initial.rhythm = factor(Initial.rhythm),
+           APACHE.II = ifelse(APACHE.II <= 15, "A", 
+                              ifelse(APACHE.II >= 16 & APACHE.II <= 20, "B",
+                                     ifelse(APACHE.II >= 21 & APACHE.II <= 25, "C",
+                                            ifelse(APACHE.II >= 26 & APACHE.II <= 30, "D", "E")))),
+           APACHE.II = factor(APACHE.II),
+           SOFA = ifelse(SOFA <= 6, "A",
+                         ifelse(SOFA >= 7 & SOFA <= 9, "B",
+                                ifelse(SOFA >= 10 & SOFA <= 12, "C",
+                                       ifelse(SOFA >= 13 & SOFA <=14, "D", "E")))),
+           SOFA = factor(SOFA),
+           RIFLE = factor(RIFLE)) %>%
     filter(!is.na(Patient)) %>%
     rename(Age = Age..Years..Visit.)
 
@@ -25,75 +38,87 @@ data <- data %>%
 ### Linear Regression Model
 
 ```{r}
-regr <- select(data, Age, Initial.rhythm:First.Potassium) %>%
-    filter(!is.na(First.Potassium))
+regr <- select(data, Age, Initial.rhythm:First.Potassium)
+mod1 <- lm(First.Potassium ~ ., data = regr, na.action = na.exclude)
+```
 
-mod1 <- lm(First.Potassium ~ ., data = regr)
+#### Model Statistics
+```{r echo=FALSE}
+pander(glance(mod1))
+```
 
-summary(mod1)
+#### Coefficients
+```{r echo=FALSE}
+pander(tidy(mod1))
 ```
 
 ### Backwards Stepwise Regression
 
 ```{r}
-mod2 <- step(mod1, trace = 0, k = log(nrow(regr)))
-
-summary(mod2)
+mod2 <- step(mod1, trace = 0)
+# , k = log(nrow(regr))
 ```
 
-### Coefficients of the model
-
-```{r}
-exp(coef(mod2))
+#### Model Statistics
+```{r echo=FALSE}
+pander(glance(mod2))
 ```
 
-### Residuals Plot
+#### Coefficients
+```{r echo=FALSE}
+pander(tidy(mod2))
+```
+
+#### Residuals Plot
 
 ```{r}
 par(mfrow=c(2,2))
 plot(mod2)
 ```
 
-## Initial Potassium Below
+## Rewarmed Potassium Below Goal >= 50% of Time
 
 ```{r}
 regr <- select(data, Age, Initial.rhythm:SCr.on.admission, Rewarmed.Potassium...below) %>%
-    filter(!is.na(Rewarmed.Potassium...below)) %>%
     mutate(Rewarmed.Potassium.Low = ifelse(Rewarmed.Potassium...below >= 0.5, TRUE, FALSE)) %>%
     select(-Rewarmed.Potassium...below)
 
-mod1 <- glm(Rewarmed.Potassium.Low ~ ., data = regr, family = binomial)
+mod1 <- glm(Rewarmed.Potassium.Low ~ ., data = regr, family = binomial, na.action = na.exclude)
+```
 
-summary(mod1)
+#### Model Statistics
+```{r echo=FALSE}
+pander(glance(mod1))
+```
+
+#### Coefficients
+```{r echo=FALSE}
+pander(tidy(mod1))
 ```
 
 ### Backwards Stepwise Regression
 
 ```{r}
-mod2 <- step(mod1, trace = 0, k = log(nrow(regr)))
-
-summary(mod2)
+mod2 <- step(mod1, trace = 0)
+# , k = log(nrow(regr))
 ```
 
-### P-value of the model
-
-```{r}
-1-pchisq(mod2$deviance, mod2$df.residual)
+#### Model Statistics
+```{r echo=FALSE}
+pander(glance(mod2))
 ```
 
-### Coefficients of the model
-
-```{r}
-exp(coef(mod2))
+#### Coefficients
+```{r echo=FALSE}
+pander(tidy(mod2))
 ```
 
-### Residuals Plot
+#### Residuals Plot
 
 ```{r}
 par(mfrow=c(2,2))
 plot(mod2)
 ```
-
 
 ### References
 
